# Emse.Updater

./: App.xaml  App.xaml.cs  Emse.Updater.csproj  Emse.Updater.sln  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  NotifyIconResources.xaml  NotifyIconViewModel.cs  README.md  Settings.json  app.config  app.manifest  packages.config
Downloader/: .cproject  .project
Emse.Updater.Console/: Emse.Updater.Console.csproj  LoggerAdapter.cs  NLog.config  Program.cs  packages.config
Emse.Updater.DTO/: Emse.Updater.DTO.csproj  SettingDto.cs
Emse.Updater.Helper/: CommonHelper.cs  Emse.Updater.Helper.csproj  JsonHelper.cs  ListHelper.cs  LogHelper.cs  PathHelper.cs  ProcessExtensions.cs  ProcessHelper.cs  RegistryHelper.cs  UserInterfaceHandler.cs  VersionHelper.cs  WindowsHelper.cs  WindowsServiceHelper.cs
Emse.Updater.Installer.WPF/: App.xaml  App.xaml.cs  Dashboard.xaml  Dashboard.xaml.cs  Emse.Updater.Installer.WPF.csproj  InstallDesktopApp.xaml  InstallDesktopApp.xaml.cs  InstallWindowsService.xaml  InstallWindowsService.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Settings.json
Emse.Updater.Linux/: .cproject  .project  App.cpp  CMakeLists.txt  Configuration.xml  Configurations.xml  main.cpp
Emse.Updater.Linux/Debug/: Emse.Updater.Linux  makefile  sources.mk
Emse.Updater.Linux/Debug/src/: App.d  Emse.Updater.Linux.d  subdir.mk
Emse.Updater.Linux/Debug/src/Helper/: CommonHelper.d  CurlHelper.d  ProcessHelper.d  XMLParserHelper.d  subdir.mk
Emse.Updater.Linux/Debug/src/xmlParser/: subdir.mk  xmlParser.d
Emse.Updater.Linux/HeaderFiles/: App.h  CommonHelper.h  Configuration.h  CurlHelper.h  LogHelper.h  ProcessHelper.h
Emse.Updater.Linux/Helper/: CommonHelper.cpp  CurlHelper.cpp  LogHelper.cpp  ProcessHelper.cpp
Emse.Updater.Linux/src/: App.cpp  Emse.Updater.Linux.cpp
Emse.Updater.Linux/src/Helper/: CommonHelper.cpp  CommonHelper.h  CurlHelper.cpp  CurlHelper.h  ProcessHelper.cpp  ProcessHelper.h  XMLParserHelper.cpp  XMLParserHelper.h
(+34 files in other folders)
